# fuse

./: .gitignore  Makefile.am  configure.ac  fuse.c  fuse.h  keysyms.pl  libfuse.c  machine.c  menu.c
compat/: getopt.h
m4/: ax_pybind11.m4
machines/: spec16.c  spec48.c
ui/swig/: Makefile.am  keysyms.c  py_wrapper.cpp  pyzx_test.py  swig_ui.c  ui_io.c  wrapper.c
ui/swig copy/: swig_ui.c
ui/txt/: Makefile.am  keysyms.c  options.c  txt_ui.c
ui/uiext/: Makefile.am  keysyms.c  py_wrapper.cpp  pyzx_test.py  termbox2.h  ui_io.h  uiext_ui.c
ui/widget/: widget.c
